<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signinHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/signin_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/signinName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/signin_name_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/signinNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_team1_boarder"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/signinPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/signin_password_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/signinPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_team1_boarder"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/signinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/login_login_button_not_pressed" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>