<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <TextView
                android:id="@+id/mainTeam1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center_horizontal|top"
                android:text="@string/team1_default"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/mainGameNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/black"
                android:text="@string/settings_game_default"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/mainTeam2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center_horizontal|top"
                android:text="@string/team2_default"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageButton
                android:id="@+id/mainScore1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:background="@drawable/red_0" />

            <ImageButton
                android:id="@+id/mainScore2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:background="@drawable/blue_0" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <ImageButton
                android:id="@+id/mainSwitchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/switch_scores" />

            <ImageButton
                android:id="@+id/mainClearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mainSwitchButton"
                android:background="@drawable/clear" />

            <ImageButton
                android:id="@+id/mainSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mainClearButton"
                android:background="@drawable/settings" />

            <TextView
                android:id="@+id/mainSettingsCourt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/settings_court_default"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>